vlib/v/checker/tests/main_called_err.out
vlib/v/checker/tests/main_called_err.v:2:2: error: the `main` function cannot be called in the program
    1 | fn main() {
    2 |     main()
      |     ~~~~~~
    3 | }
